@@ -11,6 +11,7 @@ This file documents the revision history for Perl extension Catalyst.
         - Added REDIRECT_URL support for applications running behind
           a RewriteRule in Apache. (Carl Franks)
         - Fixed FastCGI engine under win32. (Carl Franks)
+        - FastCGI doc updates (Bill Moseley)
         - Bugfix for $c->model and friends (defined).
 
 5.61    2005-12-02 00:00:00
